[gd_scene load_steps=5 format=2]

[ext_resource path="res://World.gd" type="Script" id=1]
[ext_resource path="res://Player.tscn" type="PackedScene" id=2]
[ext_resource path="res://Fish.tscn" type="PackedScene" id=3]
[ext_resource path="res://PlatformManager.gd" type="Script" id=4]

[node name="World" type="Node2D" index="0"]

script = ExtResource( 1 )

[node name="Player" parent="." index="0" instance=ExtResource( 2 )]

scale = Vector2( 2, 2 )

[node name="Fish" parent="." index="1" instance=ExtResource( 3 )]

[node name="PlatformManager" type="Node2D" parent="." index="2"]

script = ExtResource( 4 )

[node name="TextContainer" type="Container" parent="." index="3"]

editor/display_folded = true
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 640.0
margin_bottom = 64.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
hint_tooltip = "testtest"
mouse_filter = 0
mouse_default_cursor_shape = 16
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_group_": true
}

[node name="CenterContainer" type="CenterContainer" parent="TextContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 1.0
anchor_bottom = 1.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false

[node name="AmountEaten" type="Label" parent="TextContainer/CenterContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 269.0
margin_top = 25.0
margin_right = 371.0
margin_bottom = 39.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PlaceholderText"
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1


